--- a/index.css
+++ b/index.css
@@ -234,9 +234,16 @@ html {
 .service-info {
     margin: 10px -5px;
 }
+.service-image{
+    overflow: hidden;
+}
 .service-image img {
     width: 100%;
     height: 250px;
+    transition: 0.5s;
+}
+.service-image img:hover {
+    transform: scale(1.1);
 }
 .service-input {
     background-color: white;
