--- a/media.css
+++ b/media.css
@@ -37,7 +37,7 @@
     display: block;
     position: absolute;
     inset: 0px 0px 0px 99px;
-    padding: 80px 50px;
+    padding: 80px 15px;
     margin: 0;
     width: 80%;
     right: 0;
@@ -59,6 +59,9 @@
     justify-content: space-between;
     white-space: nowrap;
     transition: 0.3s;
+  }
+  .header-items ul li a:hover {
+    border-bottom: none;
   }
 
   .header-items,
@@ -83,10 +86,10 @@
 
   .header-info {
     position: absolute;
-    top: 50%;
+    top: 28%;
     left: 0%;
     width: 100%;
-    height: 360px;
+    height: 330px;
     padding: 0px 0;
     background-color: rgba(143, 118, 15, 0.669);
     text-align: center;
